cmake_minimum_required(VERSION 3.14)
project(COR C)

set(CMAKE_C_STANDARD 11)

include_directories(corewar_norme/inc)
include_directories(corewar_norme/libft)
include_directories(corewar_norme/src)

add_executable(COR
        corewar_norme/inc/asm.h
        corewar_norme/inc/op.h
        corewar_norme/inc/op_struct.h
        corewar_norme/libft/char_str.c
        corewar_norme/libft/check.c
        corewar_norme/libft/float.c
        corewar_norme/libft/ft_atoi.c
        corewar_norme/libft/ft_atoi_base.c
        corewar_norme/libft/ft_atol.c
        corewar_norme/libft/ft_bzero.c
        corewar_norme/libft/ft_count_if.c
        corewar_norme/libft/ft_is_negative.c
        corewar_norme/libft/ft_isalnum.c
        corewar_norme/libft/ft_isalpha.c
        corewar_norme/libft/ft_isascii.c
        corewar_norme/libft/ft_isdigit.c
        corewar_norme/libft/ft_isprint.c
        corewar_norme/libft/ft_itoa.c
        corewar_norme/libft/ft_lstadd.c
        corewar_norme/libft/ft_lstdel.c
        corewar_norme/libft/ft_lstdelone.c
        corewar_norme/libft/ft_lstiter.c
        corewar_norme/libft/ft_lstmap.c
        corewar_norme/libft/ft_lstnew.c
        corewar_norme/libft/ft_ltoa.c
        corewar_norme/libft/ft_ltoa_base.c
        corewar_norme/libft/ft_memalloc.c
        corewar_norme/libft/ft_memccpy.c
        corewar_norme/libft/ft_memchr.c
        corewar_norme/libft/ft_memcmp.c
        corewar_norme/libft/ft_memcpy.c
        corewar_norme/libft/ft_memdel.c
        corewar_norme/libft/ft_memmove.c
        corewar_norme/libft/ft_memset.c
        corewar_norme/libft/ft_pow.c
        corewar_norme/libft/ft_printf.c
        corewar_norme/libft/ft_printf.h
        corewar_norme/libft/ft_putchar.c
        corewar_norme/libft/ft_putchar_fd.c
        corewar_norme/libft/ft_putendl.c
        corewar_norme/libft/ft_putendl_fd.c
        corewar_norme/libft/ft_putnbr.c
        corewar_norme/libft/ft_putnbr_fd.c
        corewar_norme/libft/ft_putstr.c
        corewar_norme/libft/ft_putstr_fd.c
        corewar_norme/libft/ft_range.c
        corewar_norme/libft/ft_recursive_factorial.c
        corewar_norme/libft/ft_sqrt.c
        corewar_norme/libft/ft_strcat.c
        corewar_norme/libft/ft_strchr.c
        corewar_norme/libft/ft_strclr.c
        corewar_norme/libft/ft_strcmp.c
        corewar_norme/libft/ft_strcpy.c
        corewar_norme/libft/ft_strdel.c
        corewar_norme/libft/ft_strdup.c
        corewar_norme/libft/ft_strdup_free.c
        corewar_norme/libft/ft_strequ.c
        corewar_norme/libft/ft_striter.c
        corewar_norme/libft/ft_striteri.c
        corewar_norme/libft/ft_strjoin.c
        corewar_norme/libft/ft_strjoin_free.c
        corewar_norme/libft/ft_strlcat.c
        corewar_norme/libft/ft_strlen.c
        corewar_norme/libft/ft_strmap.c
        corewar_norme/libft/ft_strmapi.c
        corewar_norme/libft/ft_strncat.c
        corewar_norme/libft/ft_strncmp.c
        corewar_norme/libft/ft_strncpy.c
        corewar_norme/libft/ft_strnequ.c
        corewar_norme/libft/ft_strnew.c
        corewar_norme/libft/ft_strnstr.c
        corewar_norme/libft/ft_strrchr.c
        corewar_norme/libft/ft_strsplit.c
        corewar_norme/libft/ft_strsplit_n.c
        corewar_norme/libft/ft_strsplit_tab_space.c
        corewar_norme/libft/ft_strstr.c
        corewar_norme/libft/ft_strsub.c
        corewar_norme/libft/ft_strsub_free.c
        corewar_norme/libft/ft_strtrim.c
        corewar_norme/libft/ft_swap.c
        corewar_norme/libft/ft_swap_d.c
        corewar_norme/libft/ft_tolower.c
        corewar_norme/libft/ft_toupper.c
        corewar_norme/libft/ft_utoa.c
        corewar_norme/libft/ftoa.c
        corewar_norme/libft/get_next_line.c
        corewar_norme/libft/get_next_line.h
        corewar_norme/libft/int_dec.c
        corewar_norme/libft/lhex.c
        corewar_norme/libft/libft.h
        corewar_norme/libft/octal.c
        corewar_norme/libft/parse.c
        corewar_norme/libft/percent_sharp.c
        corewar_norme/libft/pointer.c
        corewar_norme/libft/uhex.c
        corewar_norme/libft/unsigned.c
        corewar_norme/libft/width.c
        corewar_norme/src/add_label_token.c
        corewar_norme/src/args_types.c
        corewar_norme/src/asm.c
        corewar_norme/src/create.c
        corewar_norme/src/error_file.c
        corewar_norme/src/error_usage.c
        corewar_norme/src/errors.c
        corewar_norme/src/fill.c
        corewar_norme/src/name_comment.c
        corewar_norme/src/new_name_or_commit.c
        corewar_norme/src/new_token.c
        corewar_norme/src/parse_tokens.c
        corewar_norme/src/quotes.c)
